--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "color-mapping",
-  "title": "Color Mapping",
+  "title": "Closest Hex Color Search",
   "description": "Trying to remove legacy colors and raw hex values from your codebase? This extension finds the nearest approved color from a set of pre-defined values for you to use",
   "icon": "extension-icon.png",
   "author": "p44v9n",
@@ -11,7 +11,7 @@
   "license": "MIT",
   "commands": [
     {
-      "name": "search-closest-hex",
+      "name": "closest-hex-search",
       "title": "Search Closest Hex Color",
       "description": "Find the closest hex color from your Tailwind-style list",
       "mode": "view"
